# nix-installer

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  action.yml  assemble_installer.py  enter-env.sh  flake.nix  nix-install.sh  nix-installer.sh  prepare-release.sh  rust-toolchain.toml  rustfmt.toml  upload_s3.sh
.buildkite/: pipeline.yml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
.github/actions/install-nix-action/: action.yml
.github/workflows/: build-aarch64-darwin.yml  build-aarch64-linux.yml  build-i686-linux.yml  build-x86_64-darwin.yml  build-x86_64-linux.yml  buildkite-external-prs.yaml  ci.yml  kiteless.yml  matrix.sh  money-with-wings.yml  propose-release.yml  release-branches.yml  release-prs.yml  release-script.yml  release-tags.yml  release.yml  update.yml  zizmor.yml  💸.yml
docs/: building.md  quirks.md  rust-library.md  troubleshooting.md
nix/: cargo-outdated-update-time-dep.patch  cargo-outdated.nix  check.nix  ci.nix  eclint.nix
nix/tests/container-test/: default.nix
nix/tests/distros/: default.nix
nix/tests/vm-test/: default.nix
src/: channel_value.rs  dedup_json.rs  diagnostics.rs  distribution.rs  error.rs  interaction.rs  lib.rs  main.rs  nixenv.rs  nixos.rs  plan.rs  self_test.rs  settings.rs  util.rs
src/action/: mod.rs  stateful.rs
src/action/base/: add_user_to_group.rs  configure_nix_daemon_service.rs  create_directory.rs  create_file.rs  create_group.rs  create_or_append_file.rs  create_or_insert_file.rs  create_or_insert_into_file.rs  create_or_merge_nix_config.rs  create_user.rs  delete_user.rs  fetch_and_unpack_nix.rs  fetch_nix.rs  mod.rs  move_unpacked_nix.rs  remove_directory.rs  setup_default_profile.rs  start_systemd_unit.rs  symlink.rs  systemd_sysext_merge.rs
src/action/common/: configure_determinate_nix_init_service.rs  configure_determinate_nixd_init_service.rs  configure_enterprise_edition_init_service.rs  configure_init_service.rs  configure_nix.rs  configure_nix_daemon_service.rs  configure_shell_profile.rs  configure_upstream_init_service.rs  create_directory.rs  create_file.rs  create_group.rs  create_nix_tree.rs  create_or_append_file.rs  create_user.rs  create_users_and_group.rs  create_users_and_groups.rs  delete_users.rs  delete_users_in_group.rs  fetch_nix.rs  mod.rs  move_unpacked_nix.rs  place_channel_configuration.rs  place_nix_configuration.rs  provision_determinate_nixd.rs  provision_nix.rs  setup_channels.rs  setup_default_profile.rs
src/action/darwin/: bootstrap_apfs_volume.rs  bootstrap_volume.rs  create_apfs_volume.rs  create_fstab_entry.rs  create_nix_volume.rs  create_synthetic_objects.rs  create_volume.rs  enable_ownership.rs  encrypt_apfs_volume.rs  encrypt_volume.rs  kickstart_launchctl_service.rs  mod.rs  unmount_apfs_volume.rs  unmount_volume.rs
src/action/linux/: cleanup.rs  configure_nix_daemon_service.rs  create_systemd_sysext.rs  ensure_steamos_nix_directory.rs  mod.rs  provision_selinux.rs  revert_clean_steamos_nix_offload.rs  start_or_enable_systemd_unit.rs  start_systemd_unit.rs  steamos_readonly.rs  systemctl_daemon_reload.rs  systemd_sysext_merge.rs
src/action/macos/: apply_nix_darwin.rs  bootstrap_apfs_volume.rs  bootstrap_launchctl_service.rs  configure_remote_building.rs  create_apfs_volume.rs  create_determinate_nix_volume.rs  create_determinate_volume_service.rs  create_enterprise_edition_volume.rs  create_fstab_entry.rs  create_nix_enterprise_volume.rs  create_nix_hook_service.rs  create_nix_volume.rs  create_synthetic_objects.rs  create_volume_service.rs  enable_ownership.rs  encrypt_apfs_volume.rs  kickstart_launchctl_service.rs  mac_remote_builder_fix.rs  mod.rs  set_tmutil_exclusion.rs  set_tmutil_exclusions.rs  setup_volume_daemon.rs  unmount_apfs_volume.rs
src/action/meta/: configure_nix.rs  configure_shell_profile.rs  create_nix_tree.rs  create_systemd_sysext.rs  create_users_and_group.rs  mod.rs  place_channel_configuration.rs  place_nix_configuration.rs  provision_nix.rs
src/action/top_level/: create_directory.rs  mod.rs  provision_nix.rs
src/actions/: configure_nix.rs  configure_nix_daemon_service.rs  configure_shell_profile.rs  create_directory.rs  create_group.rs  create_nix_tree.rs  create_nix_tree_dirs.rs  create_user.rs  create_users.rs  mod.rs  place_channel_configuration.rs  place_nix_configuration.rs  setup_default_profile.rs  start_nix_daemon.rs  start_nix_daemon_service.rs  start_systemd_service.rs
src/actions/base/: configure_nix_daemon_service.rs  configure_shell_profile.rs  create_directory.rs  create_file.rs  create_group.rs  create_or_append_file.rs  create_user.rs  fetch_nix.rs  mod.rs  move_unpacked_nix.rs  place_channel_configuration.rs  place_nix_configuration.rs  setup_default_profile.rs  start_systemd_service.rs  start_systemd_unit.rs  systemd_sysext_merge.rs
src/actions/meta/: configure_nix.rs  configure_shell_profile.rs  create_nix_tree.rs  create_nix_tree_dirs.rs  create_systemd_sysext.rs  create_users_and_group.rs  mod.rs  place_channel_configuration.rs  place_nix_configuration.rs  provision_nix.rs  start_nix_daemon.rs
src/cli/: interaction.rs  mod.rs
src/cli/arg/: channel_value.rs  instrumentation.rs  mod.rs  plan_options.rs
src/cli/subcommand/: execute.rs  export.rs  install.rs  make_determinate.rs  mod.rs  nixos.rs  plan.rs  prepare.rs  repair.rs  restore_shell.rs  revert.rs  self_test.rs  split_receipt.rs  uninstall.rs
src/feedback/: client.rs  devnull.rs  mod.rs
src/nixenv/: mod.rs  tests.rs
src/nixprofile/: mod.rs
src/os/: darwin.rs  mod.rs
src/os/darwin/: diskutil.rs  mod.rs
src/planner/: linux.rs  macos.rs  mod.rs  ostree.rs  steam_deck.rs
src/planner/darwin/: mod.rs  multi.rs  multi_user.rs
src/planner/linux/: mod.rs  multi.rs  multi_user.rs  steam_deck.rs
src/planner/macos/: mod.rs  profile.sample.block.plist  profile.sample.fail.plist  profile.sample.unknown.plist  profile_queries.rs  profiles.rs
src/planner/specific/: mod.rs  (+1 more)
src/profile/: mod.rs
tests/: plan.rs
tests/windows/: test-wsl.ps1
(+55 files in other folders)
