[package]
name = "nix-installer"
description = "A `nix` installer"
version = "0.0.2"
edition = "2021"
resolver = "2"
license = "LGPL-2.1"
repository = "https://github.com/DeterminateSystems/nix-installer"
documentation = "https://docs.rs/nix-installer/latest/nix_installer"

[package.metadata.riff.targets.aarch64-apple-darwin]
build-inputs = ["darwin.apple_sdk.frameworks.Security"]

[package.metadata.riff.targets.x86_64-apple-darwin]
build-inputs = ["darwin.apple_sdk.frameworks.Security"]

[features]
default = ["cli"]
cli = ["eyre", "color-eyre", "clap", "tracing-subscriber", "tracing-error", "atty"]

[[bin]]
name = "nix-installer"
required-features = [ "cli" ]

[dependencies]
async-trait = { version = "0.1.57", default-features = false }
atty = { version = "0.2.14", default-features = false, optional = true }
bytes = { version = "1.2.1", default-features = false, features = ["std", "serde"] }
clap = { version = "4", features = ["std", "color", "usage", "help", "error-context", "suggestions", "derive", "env"], optional = true }
color-eyre = { version = "0.6.2", default-features = false, features = [ "track-caller", "tracing-error", "capture-spantrace", "color-spantrace" ], optional = true }
eyre = { version = "0.6.8", default-features = false, features = [ "track-caller" ], optional = true }
glob = { version = "0.3.0", default-features = false }
nix = { version = "0.26.0", default-features = false, features = ["user", "fs", "process", "term"] }
owo-colors = { version = "3.5.0", default-features = false, features = [ "supports-colors" ] }
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.144", default-features = false, features = [ "std", "derive" ] }
serde_json = { version = "1.0.85", default-features = false, features = [ "std" ] }
serde_with = { version = "2.0.1", default-features = false, features = [ "std", "macros" ] }
tar = { version = "0.4.38", default-features = false, features = [ "xattr" ] }
target-lexicon = { version = "0.12.4", default-features = false, features = [ "std" ] }
thiserror = { version = "1.0.33", default-features = false }
tokio = { version = "1.21.0", default-features = false, features = ["time", "io-std", "process", "fs", "signal", "tracing", "rt-multi-thread", "macros", "io-util", "parking_lot" ] }
tracing = { version = "0.1.36", default-features = false, features = [ "std", "attributes" ] }
tracing-error = { version = "0.2.0", default-features = false, optional = true, features = ["traced-error"] }
tracing-subscriber = { version = "0.3.15", default-features = false, features = [ "std", "registry", "fmt", "json", "ansi", "env-filter" ], optional = true }
url = { version = "2.3.1", default-features = false, features = ["serde"] }
xz2 = { version = "0.1.7", default-features = false, features = ["static", "tokio"] }
plist = { version = "1.3.1", default-features = false, features = [ "serde" ]}
dirs = { version = "4.0.0", default-features = false }
typetag = { version = "0.2.3", default-features = false }
dyn-clone = { version = "1.0.9", default-features = false }
rand = { version = "0.8.5", default-features = false, features = [ "std", "std_rng" ] }
semver = { version = "1.0.14", default-features = false, features = ["serde", "std"] }
term = { version = "0.7.0", default-features = false }

[dev-dependencies]
eyre = { version = "0.6.8", default-features = false, features = [ "track-caller" ] }
tempdir = "0.3.7"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
